
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct VALID_NAMES {char* name; struct VALID_NAMES* next; } ;


 int MAX_NAME_SIZE ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,char*,int) ;
 int memset (struct VALID_NAMES*,int ,int) ;

struct VALID_NAMES *add_to_names(struct VALID_NAMES *list, char *name)
{
 list->name=(char *)malloc(MAX_NAME_SIZE);
 memcpy(list->name, name, MAX_NAME_SIZE);
 list->next=(struct VALID_NAMES *)malloc(sizeof(struct VALID_NAMES));
 list=list->next;
 memset(list, 0, sizeof(struct VALID_NAMES));
 return(list);
}
