; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_20340.c_add_to_names.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unix/remote/extr_20340.c_add_to_names.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.VALID_NAMES = type { i8*, %struct.VALID_NAMES* }

@MAX_NAME_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.VALID_NAMES* @add_to_names(%struct.VALID_NAMES* %0, i8* %1) #0 {
  %3 = alloca %struct.VALID_NAMES*, align 8
  %4 = alloca i8*, align 8
  store %struct.VALID_NAMES* %0, %struct.VALID_NAMES** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @MAX_NAME_SIZE, align 4
  %6 = call i64 @malloc(i32 %5)
  %7 = inttoptr i64 %6 to i8*
  %8 = load %struct.VALID_NAMES*, %struct.VALID_NAMES** %3, align 8
  %9 = getelementptr inbounds %struct.VALID_NAMES, %struct.VALID_NAMES* %8, i32 0, i32 0
  store i8* %7, i8** %9, align 8
  %10 = load %struct.VALID_NAMES*, %struct.VALID_NAMES** %3, align 8
  %11 = getelementptr inbounds %struct.VALID_NAMES, %struct.VALID_NAMES* %10, i32 0, i32 0
  %12 = load i8*, i8** %11, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = load i32, i32* @MAX_NAME_SIZE, align 4
  %15 = call i32 @memcpy(i8* %12, i8* %13, i32 %14)
  %16 = call i64 @malloc(i32 16)
  %17 = inttoptr i64 %16 to %struct.VALID_NAMES*
  %18 = load %struct.VALID_NAMES*, %struct.VALID_NAMES** %3, align 8
  %19 = getelementptr inbounds %struct.VALID_NAMES, %struct.VALID_NAMES* %18, i32 0, i32 1
  store %struct.VALID_NAMES* %17, %struct.VALID_NAMES** %19, align 8
  %20 = load %struct.VALID_NAMES*, %struct.VALID_NAMES** %3, align 8
  %21 = getelementptr inbounds %struct.VALID_NAMES, %struct.VALID_NAMES* %20, i32 0, i32 1
  %22 = load %struct.VALID_NAMES*, %struct.VALID_NAMES** %21, align 8
  store %struct.VALID_NAMES* %22, %struct.VALID_NAMES** %3, align 8
  %23 = load %struct.VALID_NAMES*, %struct.VALID_NAMES** %3, align 8
  %24 = call i32 @memset(%struct.VALID_NAMES* %23, i32 0, i32 16)
  %25 = load %struct.VALID_NAMES*, %struct.VALID_NAMES** %3, align 8
  ret %struct.VALID_NAMES* %25
}

declare dso_local i64 @malloc(i32) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @memset(%struct.VALID_NAMES*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
